use sqlite and raw http

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # are not set in the shell environment.
 
 # To override these values, set the shell environment variables.
-JUPYTERHUB_VERSION=0.8.0
+JUPYTERHUB_VERSION=0.9.0b2
 
 # Name of Docker machine
 DOCKER_MACHINE_NAME=jupyterhub
@@ -34,12 +34,3 @@ DATA_VOLUME_HOST=jupyterhub-data
 
 # Data volume container mount point
 DATA_VOLUME_CONTAINER=/data
-
-# Name of JupyterHub postgres database data volume
-DB_VOLUME_HOST=jupyterhub-db-data
-
-# Postgres volume container mount point
-DB_VOLUME_CONTAINER=/var/lib/postgresql/data
-
-# The name of the postgres database containing JupyterHub state
-POSTGRES_DB=jupyterhub
